added about me html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, intiral-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cory Burris's Portfolio</title>
     <link rel="stylesheet" href="assets\style.css" />
   </head>
@@ -15,7 +15,7 @@
             <a href="#About-Me">About Me</a>
           </li>
           <li>
-            <a href="#My-Work">My My Work</a>
+            <a href="#My-Work">My Work</a>
           </li>
           <li>
             <a href="#Contact-Me">Contact</a>
@@ -23,5 +23,36 @@
         </ul>
       </nav>
     </header>
+
+    <section class="hero"></section>
+
+    <section id="About-Me">
+      <h2>About Me</h2>
+      <div>
+        <img
+          src="assets\images\profilepicture.jpg"
+          alt="A picture of me at a wedding."
+        />
+
+        <p>
+          Hello, my name is Cory. This is my first portofolio page, and it was
+          created by yours truly. I am currently working as a handy man and am
+          looking to get into software development. My favorite things to do all
+          involve being outside, Well except for gaming but I love
+          <li>hiking</li>
+          <li>boating</li>
+          <li>snowboarding</li>
+          <li>gaming</li>
+          <li>My dog</li>
+        </p>
+      </div>
+    </section>
+
+    <main>
+      <section id="My-Work">
+        <h2>My Work</h2>
+        <div></div>
+      </section>
+    </main>
   </body>
 </html>
