added the rest of the html, header alignment styled

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#My-Work">My Work</a>
           </li>
           <li>
-            <a href="#Contact-Me">Contact</a>
+            <a href="#Contact-Me">Contact Me</a>
           </li>
         </ul>
       </nav>
@@ -39,10 +39,10 @@
           created by yours truly. I am currently working as a handy man and am
           looking to get into software development. My favorite things to do all
           involve being outside, Well except for gaming but I love
-          <li>hiking</li>
-          <li>boating</li>
-          <li>snowboarding</li>
-          <li>gaming</li>
+          <li>Hiking</li>
+          <li>Boating</li>
+          <li>Snowboarding</li>
+          <li>Gaming</li>
           <li>My dog</li>
         </p>
       </div>
@@ -51,8 +51,54 @@
     <main>
       <section id="My-Work">
         <h2>My Work</h2>
-        <div></div>
+        <div>
+          <a href="https://lemonsma.github.io/run-buddy/" target="blank"
+            ><img
+              src="assets\images\my-work-1.jpg"
+              alt="a screenshot of the website"
+            />
+          </a>
+          <h3>Run Buddy</h3>
+        </div>
+        <div>
+          <a href="https://www.google.com/" target="blank">
+            <img src="assets\images\my-work-2.png" alt="" />
+          </a>
+          <h3>Google</h3>
+        </div>
+        <div>
+          <a href="https://www.hockeymonkey.com/" target="blank">
+            <img src="assets\images\my-work-3.jpg" alt="" />
+          </a>
+          <h3>Hockey Monkey</h3>
+        </div>
+        <div>
+          <a href="https://www.espn.com/">
+            <img src="assets\images\my-work-4.jpg" alt="" />
+          </a>
+          <h3>ESPN</h3>
+        </div>
+
+        <div>
+          <a href="https://www.adidas.com/">
+            <img src="assets\images\my-work-5.jpg" alt="" />
+          </a>
+          <h3>Addidas</h3>
+        </div>
       </section>
     </main>
+
+    <section id="Contact-Me">
+      <h2>Contact Me</h2>
+      <div>
+        <ul>
+          <li>281-330-8004</li>
+          <li>burrisc24@gmail.com</li>
+          <a href="https://github.com/LeMonSma/portfolio-cory">
+            <li>Github</li>
+          </a>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
