css flexbox properties added

--- a/index.html
+++ b/index.html
@@ -23,82 +23,91 @@
         </ul>
       </nav>
     </header>
+    <div class="parent">
+      <section class="hero"></section>
 
-    <section class="hero"></section>
+      <section id="About-Me">
+        <article class="me">
+          <div class="flex-row">
+            <h2>About Me</h2>
+          </div>
+          <div class="flex-row profile">
+            <p style="font-size: 200px" class="avatar">&#128119;</p>
+          </div>
 
-    <section id="About-Me">
-      <h2>About Me</h2>
-      <div>
-        <img
-          src="assets\images\profilepicture.jpg"
-          alt="A picture of me at a wedding."
-        />
+          <div class="flex-row">
+            <p>
+              Hello, my name is Cory. This is my first portofolio page, and it
+              was created by yours truly. I am currently working as a handy man
+              and am looking to get into software development. My favorite
+              things to do all involve being outside, Well except for gaming but
+              I love, Hiking, Boating, Snowboarding, Sports, and Gaming.
+            </p>
+          </div>
+        </article>
+      </section>
 
-        <p>
-          Hello, my name is Cory. This is my first portofolio page, and it was
-          created by yours truly. I am currently working as a handy man and am
-          looking to get into software development. My favorite things to do all
-          involve being outside, Well except for gaming but I love
-          <li>Hiking</li>
-          <li>Boating</li>
-          <li>Snowboarding</li>
-          <li>Gaming</li>
-          <li>My dog</li>
-        </p>
-      </div>
-    </section>
+      <main>
+        <section id="My-Work">
+          <article class="my-works">
+            <div class="flex-row">
+              <h2>My Work</h2>
+            </div>
 
-    <main>
-      <section id="My-Work">
-        <h2>My Work</h2>
-        <div>
-          <a href="https://lemonsma.github.io/run-buddy/" target="blank"
-            ><img
-              src="assets\images\my-work-1.jpg"
-              alt="a screenshot of the website"
-            />
-          </a>
-          <h3>Run Buddy</h3>
-        </div>
-        <div>
-          <a href="https://www.google.com/" target="blank">
-            <img src="assets\images\my-work-2.png" alt="" />
-          </a>
-          <h3>Google</h3>
-        </div>
-        <div>
-          <a href="https://www.hockeymonkey.com/" target="blank">
-            <img src="assets\images\my-work-3.jpg" alt="" />
-          </a>
-          <h3>Hockey Monkey</h3>
-        </div>
-        <div>
-          <a href="https://www.espn.com/">
-            <img src="assets\images\my-work-4.jpg" alt="" />
-          </a>
-          <h3>ESPN</h3>
-        </div>
+            <div class="wrap">
+              <div class="works-one">
+                <a href="https://lemonsma.github.io/run-buddy/" target="blank"
+                  ><img
+                    src="assets\images\my-work-1.png"
+                    alt="a screenshot of the website"
+                  />
+                </a>
+              </div>
+              <div class="works">
+                <a href="https://www.google.com/" target="blank">
+                  <img src="assets\images\my-work-2.png" alt="" />
+                </a>
+              </div>
+              <div class="works">
+                <a href="https://www.hockeymonkey.com/" target="blank">
+                  <img src="assets\images\my-work-3.png" alt="" />
+                </a>
+              </div>
+              <div class="works">
+                <a href="https://www.espn.com/">
+                  <img src="assets\images\my-work-4.png" alt="" />
+                </a>
+              </div>
 
+              <div class="works">
+                <a href="https://www.adidas.com/">
+                  <img src="assets\images\my-work-5.png" alt="" />
+                </a>
+              </div>
+            </div>
+          </article>
+        </section>
+      </main>
+
+      <section id="Contact-Me">
+        <h2>Contact Me</h2>
         <div>
-          <a href="https://www.adidas.com/">
-            <img src="assets\images\my-work-5.jpg" alt="" />
-          </a>
-          <h3>Addidas</h3>
+          <ul>
+            <li>281-330-8004</li>
+            <li>burrisc24@gmail.com</li>
+            <a href="https://github.com/LeMonSma/portfolio-cory">
+              <li>Github</li>
+            </a>
+          </ul>
         </div>
       </section>
-    </main>
-
-    <section id="Contact-Me">
-      <h2>Contact Me</h2>
-      <div>
-        <ul>
-          <li>281-330-8004</li>
-          <li>burrisc24@gmail.com</li>
-          <a href="https://github.com/LeMonSma/portfolio-cory">
-            <li>Github</li>
-          </a>
-        </ul>
-      </div>
-    </section>
+    </div>
   </body>
 </html>
+
+<!-- <div class="flex-row profile">
+  <img
+    src="assets\images\profilepicture.jpg"
+    alt="A picture of me at a wedding."
+  />
+</div> -->
