--- a/index.html
+++ b/index.html
@@ -25,22 +25,24 @@
       </nav>
     </header>
 
-    <section id="About-Me" class="flex back-ground-img">
-      <div class="me">
+    <section id="About-Me" class="flex-row back-ground-img">
+      <div class="me-title">
         <h2>About Me</h2>
       </div>
-      <div class="me flex-row">
-        <p style="font-size: 200px" class="avatar">&#128119;</p>
-      </div>
+      <div class="me-content">
+        <div class="me-item">
+          <p style="font-size: 200px" class="avatar">&#128119;</p>
+        </div>
 
-      <div class="me flex-row flex-grow">
-        <p>
-          Hello, my name is Cory. This is my first portofolio page, and it was
-          created by yours truly. I am currently working as a handy man and am
-          looking to get into software development. My favorite things to do all
-          involve being outside, Well except for gaming but I love, Hiking,
-          Boating, Snowboarding, Sports, and Gaming.
-        </p>
+        <div class="me-item flex-grow">
+          <p>
+            Hello, my name is Cory. This is my first portofolio page, and it was
+            created by yours truly. I am currently working as a handy man and am
+            looking to get into software development. My favorite things to do
+            all involve being outside, Well except for gaming but I love,
+            Hiking, Boating, Snowboarding, Sports, and Gaming.
+          </p>
+        </div>
       </div>
     </section>
 
@@ -51,7 +53,11 @@
 
       <div class="col-content">
         <div class="col-item col-item-full">
-          <a href="https://lemonsma.github.io/run-buddy/" target="_blank">
+          <a
+            class="img-syle works1"
+            href="https://lemonsma.github.io/run-buddy/"
+            target="_blank"
+          >
             <span>
               <p>item 1</p>
             </span>
@@ -59,7 +65,11 @@
         </div>
 
         <div class="col-item">
-          <a href="https://lemonsma.github.io/run-buddy/" target="_blank">
+          <a
+            class="img-syle works2"
+            href="https://lemonsma.github.io/run-buddy/"
+            target="_blank"
+          >
             <span>
               <p>item 2</p>
             </span>
@@ -67,51 +77,47 @@
         </div>
 
         <div class="col-item">
-          <a href="https://lemonsma.github.io/run-buddy/" target="_blank">
+          <a
+            class="img-syle works3"
+            href="https://lemonsma.github.io/run-buddy/"
+            target="_blank"
+          >
             <span>
               <p>item 3</p>
             </span>
           </a>
         </div>
 
-        <!-- <div class="works">
-          <a href="https://www.google.com/" target="blank">
-            <div class="works2 img-style">
-              <span>
-                <h3>GOOGLE</h3>
-              </span>
-            </div>
+        <div class="col-item">
+          <a
+            class="img-syle works4"
+            href="https://lemonsma.github.io/run-buddy/"
+            target="_blank"
+          >
+            <span>
+              <p>item 3</p>
+            </span>
           </a>
-        </div> -->
+        </div>
 
-        <!-- <div class="works">
-          <a href="https://www.hockeymonkey.com/" target="blank">
-            <div class="works3 img-style">
-              <h3>Hockey</h3>
-            </div>
+        <div class="col-item">
+          <a
+            class="img-syle works5"
+            href="https://lemonsma.github.io/run-buddy/"
+            target="_blank"
+          >
+            <span>
+              <p>item 3</p>
+            </span>
           </a>
-          <div class="works">
-            <a href="https://www.espn.com/" target="blank">
-              <div class="works4 img-style">
-                <h3>ESPN</h3>
-              </div>
-            </a>
-          </div>
-          <div class="works">
-            <a href="https://www.adidas.com/">
-              <div class="works5 img-style">
-                <h3>Adidas</h3>
-              </div>
-            </a>
-          </div>
-        </div> -->
+        </div>
       </div>
     </section>
 
-    <section id="Contact-Me">
-      <div class="flex"><h2>Contact Me</h2></div>
+    <section id="Contact-Me" class="contact-flex">
+      <div class="contact-title"><h2>Contact Me</h2></div>
 
-      <div class="flex">
+      <div class="contact-content">
         <ul>
           <li>599-987-2345</li>
           <li>burrisc24@gmail.com</li>
@@ -123,10 +129,3 @@
     </section>
   </body>
 </html>
-
-<!-- <div class="flex-row profile">
-  <img
-    src="assets\images\profilepicture.jpg"
-    alt="A picture of me at a wedding."
-  />
-</div> -->
