screen size styling 780 px

--- a/index.html
+++ b/index.html
@@ -59,19 +59,15 @@
             target="_blank"
           >
             <span>
-              <p>item 1</p>
+              <p>Run Buddy</p>
             </span>
           </a>
         </div>
 
         <div class="col-item">
-          <a
-            class="img-syle works2"
-            href="https://lemonsma.github.io/run-buddy/"
-            target="_blank"
-          >
+          <a class="img-syle works2" href="https://google.com" target="_blank">
             <span>
-              <p>item 2</p>
+              <p>Google</p>
             </span>
           </a>
         </div>
@@ -79,11 +75,11 @@
         <div class="col-item">
           <a
             class="img-syle works3"
-            href="https://lemonsma.github.io/run-buddy/"
+            href="https://www.hockeymonkey.com/"
             target="_blank"
           >
             <span>
-              <p>item 3</p>
+              <p>Hockey</p>
             </span>
           </a>
         </div>
@@ -91,11 +87,11 @@
         <div class="col-item">
           <a
             class="img-syle works4"
-            href="https://lemonsma.github.io/run-buddy/"
+            href="https://www.espn.com/"
             target="_blank"
           >
             <span>
-              <p>item 3</p>
+              <p>ESPN</p>
             </span>
           </a>
         </div>
@@ -103,11 +99,11 @@
         <div class="col-item">
           <a
             class="img-syle works5"
-            href="https://lemonsma.github.io/run-buddy/"
+            href="https://www.adidas.com/us"
             target="_blank"
           >
             <span>
-              <p>item 3</p>
+              <p>Addidas</p>
             </span>
           </a>
         </div>
@@ -119,9 +115,16 @@
 
       <div class="contact-content">
         <ul>
-          <li>599-987-2345</li>
-          <li>burrisc24@gmail.com</li>
-          <a href="https://github.com/LeMonSma/portfolio-cory">
+          <a class="small-screen-1" href="">
+            <li>599-987-2345</li>
+          </a>
+          <a class="small-screen-2" href="mailto: burrisc24@gmail.com">
+            <li>burrisc24@gmail.com</li>
+          </a>
+          <a
+            class="small-screen-3"
+            href="https://github.com/LeMonSma/portfolio-cory"
+          >
             <li>GitHub</li>
           </a>
         </ul>
